# llm_adapter

./: .gitignore  CHECKLIST.md  README.md  pyproject.toml  test_all.py
archive/deprecated/: claude_adapter.py  nemo_gateway.py
config/: config-emergency-4k.yaml  config.yaml
docs/: ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_COMPATIBILITY_FIXES.md  CLAUDE_CODE_SETUP.md  MEMORY_TROUBLESHOOTING.md  README_TESTING.md  README_V3_EXTREME.md  REORGANIZATION.md  TESTING.md
scripts/deployment/: clean.sh  restart_gateway.sh
scripts/setup/: download_reasoning_parser.sh  fix_paths_after_reorganization.sh  hf_downloader.py  llm_manager.py  run_claude_adapter.py  setup_claude_code_cli.sh  validate_claude_code_cli.sh
scripts/testing/: benchmark.py  check_tool_calling.sh  debug_memory.sh  test_context_kv_cache.py  verify_startup.sh
src/nemo_orchestrator/: __init__.py  main.py
src/nemo_orchestrator/adapters/: __init__.py  base.py  claude_adapter.py  claude_adapter_v2.py  factory.py  nemotron_adapter.py  openai_adapter.py
src/nemo_orchestrator/adapters/claude_code/: __init__.py  request.py  response.py  streaming.py  tools.py  utils.py
src/nemo_orchestrator/adapters/claude_code/models/: __init__.py  anthropic.py  openai.py
src/nemo_orchestrator/gateway/: __init__.py  server.py
src/nemo_orchestrator/scheduler/: __init__.py  pulse_scheduler.py
src/nemo_orchestrator/utils/: __init__.py  model_aliases.py
